# mango-display

./: .gitignore  Cargo.toml  README.md  install.sh  mango-display.desktop  mdisplay.desktop
src/: backend.rs  main.rs  settings.rs  ui.rs
